package com.pjatk.bank;

public enum BankOperationType {
    DEPOSIT, TRANSFER, WITHDRAWAL
}
